force-app/main/default/objects/Custom_Object__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Objects</relationshipLabel>
    <relationshipName>Custom_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>