force-app/main/default/objects/Custom_Object__c/fields/Days_Until_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Date__c</fullName>
    <formula>The_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>