force-app/main/default/objects/Custom_Object__c/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <label>Geo</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>