force-app/main/default/objects/Custom_Object__c/fields/Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text__c</fullName>
    <label>Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>