force-app/main/default/objects/Custom_Object__c/fields/The_Date__c.field-meta.xml
<CustomField>
    <label>The Date</label>
    <type>Date</type>
    <fullName>The_Date__c</fullName>
</CustomField>