force-app/main/default/objects/Custom_Object__c/fields/The_Picklist__c.field-meta.xml
<CustomField>
    <label>The Picklist</label>
    <type>Picklist</type>
    <fullName>The_Picklist__c</fullName>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>Value 3</fullName>
            </value>
            <value>
                <fullName>Value 4</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>